force-app/main/default/objects/Bande_Usine_Erreur__c/Bande_Usine_Erreur__c.object-meta.xml
<CustomObject>
    <label>Bande Usine Erreur</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Référence de l&apos;Erreur</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bande Usine Erreurs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>