force-app/main/default/objects/Bande_Usine_Erreur__c/fields/Bande_Usine__c.field-meta.xml
<CustomField>
    <fullName>Bande_Usine__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bande Usine</label>
    <referenceTo>Bande_Usine__c</referenceTo>
    <relationshipLabel>Erreurs lors du chargement de la Bande Usine</relationshipLabel>
    <relationshipName>Bande_Usine_Erreurs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>