force-app/main/default/objects/Bande_Usine_Erreur__c/fields/Identifiant_SIM__c.field-meta.xml
<CustomField>
    <fullName>Identifiant_SIM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Identifiant SIM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>