force-app/main/default/objects/Bande_Usine_Erreur__c/fields/Message_d_Erreur__c.field-meta.xml
<CustomField>
    <fullName>Message_d_Erreur__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message d&apos;Erreur</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>