force-app/main/default/objects/Bande_Usine_Erreur__c/fields/Numero_de_Serie__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Serie__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Numéro de Série</label>
    <length>20</length>
    <type>Text</type>
</CustomField>